syntax = "proto3";

package role;

service Role {
  rpc GetRole (RoleRequest) returns (RoleReply) {}
}

message RoleRequest {
  bool slow = 1;
}

message RoleReply {
  string role = 1;
}
